Changed shutdown button name

--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -1836,7 +1836,7 @@ color: #ff4d4d;
 }</string>
                        </property>
                        <property name="text">
-                        <string>Shutdown </string>
+                        <string>Power Off</string>
                        </property>
                       </widget>
                      </item>
